--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,9 +22,10 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: "./IVU-Oracle"
+      working-directory: "./IVU-Zedas"
 
     - name: Build
       run:  dotnet build --configuration Release --property:OutputPath=./output --property:WarningLevel=0
+      working-directory: "./IVU-Zedas"
 
 
