--- a/IVU-Zedas/IVU-Zedas/IVU-Zedas.csproj
+++ b/IVU-Zedas/IVU-Zedas/IVU-Zedas.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="System.ServiceModel.Security" Version="6.0.*" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\Shared\Shared.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
