--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -81,8 +81,8 @@ jobs:
     # Execute all unit tests in the solution
     #- name: Execute unit tests
     #  run: dotnet test
-    #- name: Restore Packages
-    #  run: nuget restore $env:Solution_Name
+    - name: Restore Packages
+      run: nuget restore $env:Solution_Name
       
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
