--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -81,13 +81,13 @@ jobs:
     # Execute all unit tests in the solution
     #- name: Execute unit tests
     #  run: dotnet test
-    - name: Restore Packages
-      run: nuget restore $env:Solution_Name
+    #- name: Restore Packages
+    #  run: nuget restore $env:Solution_Name
       
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       #run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration /t:WebPublish /p:WebPublishMethod=FileSystem /p:DeleteExistingFiles=True /p:PublishUrl="published"
-      run: msbuild $env:Solution_Name /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="D:\a\BuildFunction\BuildFunction\IVU-Zedas\output.zip" /p:DeployIisAppPath="Default Web Site"
+      run: msbuild $env:Solution_Name /t:Restore /p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="D:\a\BuildFunction\BuildFunction\IVU-Zedas\output.zip" /p:DeployIisAppPath="Default Web Site"
       env:
         Configuration: ${{ matrix.configuration }}
     - name: List files in the repository
@@ -102,5 +102,5 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
        name: BuildFunction
-       path: "./IVU-Zedas/IVU-Zedas/published"
+       path: "./IVU-Zedas/output.zip"
 
