--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       working-directory: "./IVU-Zedas"
 
     - name: Build
-      run:  dotnet build --configuration Release --property:OutputPath=./IVU-Zedas/output --property:WarningLevel=0
+      run:  dotnet build --configuration Release --property:OutputPath=output --property:WarningLevel=0
       working-directory: "./IVU-Zedas"
       
     - name: List files in the repository
