--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,9 @@ jobs:
     - name: Build
       run:  dotnet build --configuration Release --property:OutputPath=output --property:WarningLevel=0
       working-directory: "./IVU-Zedas"
-      
+    - name: PWD
+      run: |
+          pwd
     - name: List files in the repository
       working-directory: IVU-Zedas/IVU-Zedas
       run: |
@@ -43,6 +45,6 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
        name: BuildFunction
-       path: "./IVU-Zedas/output"
+       path: "./IVU-Zedas/IVU-Zedas/output"
 
 
